<resources>
    <string name="app_name">Aquarium calculator</string>
    <!--    <string name="incorrect_data">Данные были введены неверно или неполностью. Рыбку добавлять не будем.</string>-->
    <string name="incorrect_data">The data was entered incorrectly or incompletely. We will not add fish.</string>
    <!--    <string name="not_enough_data">Недостаточно данных для проведения расчётов</string>-->
    <string name="not_enough_data">Insufficient data to make calculations</string>
    <!--    <string name="unreal_temperature">Данной температуры достичь невозможно</string>-->
    <string name="unreal_temperature">This temperature cannot be reached</string>
    <!--    <string name="plug">Заглушка</string>-->
    <string name="plug">Plug</string>
    <!--    <string name="input_fish_params">Укажите параметры своей рыбки</string>-->
    <string name="input_fish_params">Specify the parameters for your fish</string>
    <!--    <string name="fish_name">Имя рыбки</string>-->
    <string name="fish_name">The name of the fish</string>
    <!--    <string name="fish_length">Длина рыбки</string>-->
    <string name="fish_length">The length of the fish</string>
    <!--    <string name="fish_height">Высота рыбки</string>-->
    <string name="fish_height">The height of the fish</string>
    <!--    <string name="fish_kind">Вид рыбки</string>-->
    <string name="fish_kind">Kind of fish</string>
    <!--    <string name="aquarium_value">Объём аквариума</string>-->
    <string name="aquarium_value">The volume of the aquarium</string>
    <!--    <string name="aquarium_temperature">Текущая температура воды</string>-->
    <string name="aquarium_temperature">Current water temperature</string>
    <!--    <string name="wish_temperature">Желаемая температура воды</string>-->
    <string name="wish_temperature">Desired temperature of the water</string>
    <!--    <string name="have_temperature">Температура имеющийся воды для замены</string>-->
    <string name="have_temperature">Water supply temperature for replacement</string>
    <!--    <string name="calculate_water_value">Расчитать необходимый объём воды для замены</string>-->
    <string name="calculate_water_value">Calculate the required volume of water to replace</string>
    <!--    <string name="required_amount_water_to_replace"> Необходимый объём воды для замены:</string>-->
    <string name="required_amount_water_to_replace"> Required amount of water to replace:</string>
    <!--    <string name="f_name">Имя рыбки:</string>-->
    <string name="f_name">Name:</string>
    <!--    <string name="fish_size">Размер рыбки:</string>-->
    <string name="fish_size">Size of fish:</string>
    <!--    <string name="f_kind">Вид рыбки:</string>-->
    <string name="f_kind">Kind of fish:</string>
    <!--    <string name="my_aquarium">мой аквариум</string>-->
    <string name="my_aquarium">my aquarium</string>
    <!--    <string name="my_fishes">мои рыбки</string>-->
    <string name="my_fishes">my fishes</string>
</resources>